--- a/index.html
+++ b/index.html
@@ -59,28 +59,49 @@
       </div><!--aside content wrapper ends-->
     </aside>
   
-    <section class="info-about-unplugged">
-      <h1>Have the work week you always dreamed of - without the bad wifi</h1>
-      <img src="" alt="tent icon" />
-      <p>Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
-      <img src="" alt="person in bed icon" />
-      <p>12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
-      <img src="" alt="fork and knife icon" />
-      <p>Private chef team providing on demand meals - just like your team kitchen.</p>
-      <img src="" alt="foot steps icon" />
-      <p>5 outdoor obstacle courses, including private beach 1/2 mile from bungalow.</p>
-      <img src="" alt="smiley icon" />
-      <p>Retreat facilitator to manage your day activities so you all get a chance to reset.</p>
-      <img src="" alt="wifi icon" />
-      <p>Decicated computer room for times that you must wifi.</p>
-  
-      <section class="previous-retreats">
-        <h1>Be a better team in 5 days, like these.</h1>
-        <img src="" alt="team photo" />
-        <h2> LaCrue Botling Co.<br>
-        October 2017</h2>
-        <p>Information and testimonial about this particular retreat.</p>
-      </section>
+    <section class="features">
+      <div class="content-wrapper">
+        <h2>Have the work week you always dreamed of - without the bad wifi</h2>
+        <div class="features-items">
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+          </article>
+          <article>
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
+         </article>
+         <article>
+           <p class="fontawesome-icon"></p>
+           <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
+          </article>
+         <article>
+           <p class="fontawesome-icon"></p>
+            <p class="features-item-description">5 outdoor obstacle courses, including private beach 1/2 mile from bungalow.</p>
+         </article>
+         <article>
+           <p class="fontawesome-icon"></p>
+           <p class="features-item-description">Retreat facilitator to manage your day activities so you all get a chance to reset.</p>
+         </article>
+         <article>
+           <p class="fontawesome-icon"></p>
+           <p class="features-item-description">Decicated computer room for times that you must wifi.</p>
+         </article>
+        </div>
+      </div>
+    </section>
+
+    <section class="reviews">
+      <div class="content-wrapper">
+        <h2>Be a better team in 5 days, like these.</h2>
+        <article>
+          <div>
+            <h3> LaCrue Botling Co. October 2017</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            </p>
+          </div>
+        </article>
+      </div>
     </section>
   </main>
   
