--- a/faq/index.html
+++ b/faq/index.html
@@ -28,7 +28,9 @@
   <!-- Add your site or application content here -->
   <header>
     <div class="content-wrapper"> <!--Good practice to create a content wrapper for each different section.-->
-      <a href="#"><img src="" alt="unplugged logo"></a>
+      <figure>
+      <a href="#"><img src="../img/unpluggedlogo.jpg" alt="unplugged logo"></a>
+      </figure>
       <div class="header-divider"></div>
       <nav>
         <ul>
