--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>UNPLUGGED</title>
+  <title>Unplugged Retreat</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -15,22 +15,21 @@
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
-
+  
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
   <script src="https://kit.fontawesome.com/58752c7a0a.js" crossorigin="anonymous"></script>
   <meta name="theme-color" content="#fafafa">
   <!--Google Fonts-->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
-  
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">  
 </head>
 
 <body>
   <!-- Add your site or application content here -->
   <header>
-    <div class="content-wrapper"> <!--Good practice to create a content wrapper for each different section.-->
+    <div class="content-wrapper">
       <figure>
-      <a href="#"><img src="img/unpluggedlogo.jpg" alt="unplugged logo"></a>
+      <a href="#"><img src="img/unpluggedlogo-correct.png" alt="unplugged logo"></a>
       </figure>
       <div class="header-divider"></div>
       <nav>
@@ -45,7 +44,7 @@
   <main>
     <section class="hero-area">
       <div class="content-wrapper">
-        <h1>Retreat from the desk, return refreshed</h1>
+        <h1>Retreat from the desk, return refreshed.</h1>
       </div>
     </section>
 
@@ -66,7 +65,7 @@
   
     <section class="features">
       <div class="content-wrapper">
-        <h2>Have the work week you always dreamed of - without the bad wifi</h2>
+        <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
         <div class="features-items">
           <article>
             <i class="fas fa-campground"></i>
