--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>UNPLUGGED | ABOUT</title>
+  <title>Unplugged Retreat | About</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -28,9 +28,9 @@
 <body>
   <!-- Add your site or application content here -->
   <header>
-    <div class="content-wrapper"> <!--Good practice to create a content wrapper for each different section.-->
+    <div class="content-wrapper">
       <figure>
-      <a href="#"><img src="../img/unpluggedlogo.jpg" alt="unplugged logo"></a>
+      <a href="../index.html"><img src="../img/unpluggedlogo-correct.png" alt="unplugged logo"></a>
       </figure>
       <div class="header-divider"></div>
       <nav>
