--- a/faq/index.html
+++ b/faq/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>UNPLUGGED | FAQ</title>
+  <title>Unplugged Retreat | FAQ</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -30,7 +30,7 @@
   <header>
     <div class="content-wrapper"> <!--Good practice to create a content wrapper for each different section.-->
       <figure>
-      <a href="#"><img src="../img/unpluggedlogo.jpg" alt="unplugged logo"></a>
+      <a href="../index.html"><img src="../img/unpluggedlogo-correct.png" alt="unplugged logo"></a>
       </figure>
       <div class="header-divider"></div>
       <nav>
