Added h to h4 tag
The closing </h4> tag was missing an h, and that was corrected.

--- a/faq/index.html
+++ b/faq/index.html
@@ -28,7 +28,7 @@
 <body>
   <!-- Add your site or application content here -->
   <header>
-    <div class="content-wrapper"> <!--Good practice to create a content wrapper for each different section.-->
+    <div class="content-wrapper">
       <figure>
       <a href="../index.html"><img src="../img/unpluggedlogo-correct.png" alt="unplugged logo"></a>
       </figure>
@@ -46,7 +46,7 @@
     <div class="content-wrapper">
       <h2>Frequently Asked Questions</h2>
       <div class="faq-content">          
-        <h4>How do I go to the Unplugged retrest?</4>
+        <h4>How do I go to the Unplugged retrest?</h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
       </div>
       <div class="faq-content">
